Update example analysis pere Issue #200.